--- a/.github/workflows/deploy_github_io.yml
+++ b/.github/workflows/deploy_github_io.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Build project
         run: npm run build
 
+      - name: Create CNAME
+        run: echo "deep41.dev" >> ./dist/CNAME
+
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v2
         with:
