--- a/.github/workflows/deploy_github_io.yml
+++ b/.github/workflows/deploy_github_io.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm run build
 
       - name: Create CNAME
-        run: echo "deep41.dev" >> ./dist/CNAME
+        run: cp CNAME >> ./dist/CNAME
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v2
