--- a/.github/workflows/deploy_github_io.yml
+++ b/.github/workflows/deploy_github_io.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Build project
         run: npm run build
 
-      - name: Create CNAME
-        run: cp ./CNAME ./dist/CNAME
+      # - name: Create CNAME
+      #   run: cp ./CNAME ./dist/CNAME
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v4
